fix heart z-index

--- a/resume/css/thx.css
+++ b/resume/css/thx.css
@@ -8,6 +8,7 @@
     background: #BB0033;
 }
 .top {
+    z-index: 2;
     position: absolute;
     width: 50px;
     height: 50px;
@@ -15,6 +16,7 @@
     background-color: red;
 }
 .bottom {
+    z-index: 2;
     position: absolute;
     width: 100px;
     height: 100px;
@@ -29,7 +31,7 @@
     margin-left: -100px;
 }
 #div5 {
-    z-index: -1;
+    z-index: 1;
     position: absolute;
     width: 60px;
     height: 60px;
